--- a/Gravity Simulator.vcxproj
+++ b/Gravity Simulator.vcxproj
@@ -71,12 +71,20 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\include;C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\lib;C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\include;C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\lib;C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\lib;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\Users\Ahmed Mohsen\OpenGL\Gravity Simulator\Libraries\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -88,7 +96,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -105,6 +113,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -117,7 +126,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -134,6 +143,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
